@startuml

title __GRAPHS's Class Diagram__\n


    namespace raphs {
      class Graphs.BarChart {
          + BarChart()
          + display()
      }
    }

  

    namespace raphs {
      class Graphs.BarChartDataBase {
          + createDataBase()
      }
    }

  

    namespace raphs {
      abstract class Graphs.Chart {
          + Chart()
          {abstract} + display()
      }
    }

  

    namespace raphs {
      class Graphs.LineChart {
          + LineChart()
          + display()
      }
    }


    namespace raphs {
      class Graphs.LineChartDataBase {
          + createDataBase()
      }
    }

  

    namespace raphs {
      interface Graphs.iCreateDataBase {
          {abstract} + createDataBase()
      }
    }

  

  Graphs.BarChart -up-|> Graphs.Chart
  Graphs.BarChartDataBase .up.|> Graphs.iCreateDataBase
  Graphs.Chart -up-|> org.jfree.ui.ApplicationFrame
  Graphs.Chart o-- Graphs.iCreateDataBase : createDataBase
  Graphs.LineChart -up-|> Graphs.Chart
  Graphs.LineChartDataBase .up.|> Graphs.iCreateDataBase


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
